--- a/Gui/Language/English/inventoryDescriptions.json
+++ b/Gui/Language/English/inventoryDescriptions.json
@@ -15,6 +15,14 @@
       "description" : "BETA: \n  Press 'Q' While holding to open up Race Control UI. \n Press 'E' or 'ESC' to exit (Race Control must be placed down)",
       "title" : "SMAR Race Controller Tool"
    },
+   "9f5ce20a-b774-4df9-9b6a-d1993c705138" : {
+      "description" : "Saves Track as a blueprint for later use. \n Place down on memorable spot (like back corner of start/finish line). Make sure you place it down on a separate block so it can become a floating obj. \n Press 'E' To save the track to the block and blueprint. Save block on lift.  ",
+      "title" : "SMAR Track Loader"
+   },
+   "ab524867-122b-4f98-990b-67ff6d2e9c5c" : {
+      "description" : "Car AI Driver, connect to steering bearings and SMAR Engine. Place anywhere on car with steering wheel (smooth face) facing the front. \n MUST BE PLACED WHILE CAR IS ON LIFT IN ORDER FOR CAR TO BE SCANNED CORRECTLY.",
+      "title" : "SMAR Driver"
+   },
    "b20d3826-3235-459c-a4c9-ef1438caaed9" : {
       "description" : "Connect Driver block to this and then connect this to brake lights (only braking)",
       "title" : "Brake Light Control Unit"
@@ -24,11 +32,7 @@
       "title" : "SMAR CheckPoint"
    },
    "fbc31377-6081-426d-b518-f676840c407c" : {
-      "description" : "Car AI Driver, connect to steering bearings and SMAR Engine. Place anywhere on car with steering wheel (smooth face) facing the front. \n MUST BE PLACED WHILE CAR IS ON LIFT IN ORDER FOR CAR TO BE SCANNED CORRECTLY.",
-      "title" : "SMAR Driver"
-   },
-   "9f5ce20a-b774-4df9-9b6a-d1993c705138" : {
-      "description" : "Saves Track as a blueprint for later use. \n Place down on memorable spot (like back corner of start/finish line). Make sure you place it down on a separate block so it can become a floating obj. \n Press 'E' To save the track to the block and blueprint. Save block on lift.  ",
-      "title" : "SMAR Track Loader"
+      "description" : "Place on car and connect to driver to customize where you want the downforces to end up",
+      "title" : "SMAR Downforce Updater"
    }
 }
